MPL/test/MplPasses/TypeChecker/cases/typecheck/positive/46.mpl
data Unit -> C =
    Unit :: -> C
fun n5 :: Unit, Unit, Unit -> Unit =
    a, b, c -> c
