MPL/test/MplPasses/TypeChecker/cases/typecheck/negative/5.mpl
data Unit -> C =
    Unit :: -> C
fun n5 :: -> A =
    -> Unit

